# plutus-secp256k1-interop

./: .gitignore  .nvimrc  CHANGELOG.md  README.md  cabal.project  plutus-secp256k1-interop.cabal  shell.nix
ffi/: FFI.hs  ffi.c  ffi.h
src/Plutus/SECP256K1/: FFI.hs  Interop.hs
test/properties/: Main.hs
